k8s/service-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-active
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: myapp
    version: blue
  ports:
    - port: 80
      targetPort: 8000
