k8s/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-blue
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: myapp
    version: blue
  ports:
    - port: 8000
      targetPort: 8000
