k8s/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-green
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: myapp
    version: green
  ports:
    - port: 8000
      targetPort: 8000
